Properly initialize and close executive service